// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFuelTypeIcon should apply custom size when provided 1`] = `
<div>
  <div>
    <div
      class="w-20 h-16 flex items-center justify-center text-blue-600"
    >
      <div
        class="relative"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-fuel w-full h-full"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="3"
            x2="15"
            y1="22"
            y2="22"
          />
          <line
            x1="4"
            x2="14"
            y1="9"
            y2="9"
          />
          <path
            d="M14 22V4a2 2 0 0 0-2-2H6a2 2 0 0 0-2 2v18"
          />
          <path
            d="M14 13h2a2 2 0 0 1 2 2v2a2 2 0 0 0 2 2a2 2 0 0 0 2-2V9.83a2 2 0 0 0-.59-1.42L18 5"
          />
        </svg>
        <div
          class="absolute -bottom-1 -right-1 w-3 h-3 bg-blue-600 rounded-full border-2 border-white"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`getFuelTypeIcon should return CNG icon for cng fuel type 1`] = `
<div>
  <div>
    <div
      class="w-12 h-8 flex items-center justify-center text-orange-600"
    >
      <div
        class="relative"
      >
        <div
          class="flex items-center space-x-1"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-flame w-6 h-6"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.5 14.5A2.5 2.5 0 0 0 11 12c0-1.38-.5-2-1-3-1.072-2.143-.224-4.054 2-6 .5 2.5 2 4.9 4 6.5 2 1.6 3 3.5 3 5.5a7 7 0 1 1-14 0c0-1.153.433-2.294 1-3a2.5 2.5 0 0 0 2.5 2.5z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-atom w-4 h-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <path
              d="M20.2 20.2c2.04-2.03.02-7.36-4.5-11.9-4.54-4.52-9.87-6.54-11.9-4.5-2.04 2.03-.02 7.36 4.5 11.9 4.54 4.52 9.87 6.54 11.9 4.5Z"
            />
            <path
              d="M15.7 15.7c4.52-4.54 6.54-9.87 4.5-11.9-2.03-2.04-7.36-.02-11.9 4.5-4.52 4.54-6.54 9.87-4.5 11.9 2.03 2.04 7.36.02 11.9-4.5Z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`getFuelTypeIcon should return CNG icon for natural gas fuel type (alias) 1`] = `
<div>
  <div>
    <div
      class="w-12 h-8 flex items-center justify-center text-orange-600"
    >
      <div
        class="relative"
      >
        <div
          class="flex items-center space-x-1"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-flame w-6 h-6"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.5 14.5A2.5 2.5 0 0 0 11 12c0-1.38-.5-2-1-3-1.072-2.143-.224-4.054 2-6 .5 2.5 2 4.9 4 6.5 2 1.6 3 3.5 3 5.5a7 7 0 1 1-14 0c0-1.153.433-2.294 1-3a2.5 2.5 0 0 0 2.5 2.5z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-atom w-4 h-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <path
              d="M20.2 20.2c2.04-2.03.02-7.36-4.5-11.9-4.54-4.52-9.87-6.54-11.9-4.5-2.04 2.03-.02 7.36 4.5 11.9 4.54 4.52 9.87 6.54 11.9 4.5Z"
            />
            <path
              d="M15.7 15.7c4.52-4.54 6.54-9.87 4.5-11.9-2.03-2.04-7.36-.02-11.9 4.5-4.52 4.54-6.54 9.87-4.5 11.9 2.03 2.04 7.36.02 11.9-4.5Z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`getFuelTypeIcon should return LPG icon for liquefied petroleum gas fuel type (alias) 1`] = `
<div>
  <div>
    <div
      class="w-12 h-8 flex items-center justify-center text-red-600"
    >
      <div
        class="relative"
      >
        <div
          class="flex items-center space-x-1"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-fuel w-6 h-6"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="3"
              x2="15"
              y1="22"
              y2="22"
            />
            <line
              x1="4"
              x2="14"
              y1="9"
              y2="9"
            />
            <path
              d="M14 22V4a2 2 0 0 0-2-2H6a2 2 0 0 0-2 2v18"
            />
            <path
              d="M14 13h2a2 2 0 0 1 2 2v2a2 2 0 0 0 2 2a2 2 0 0 0 2-2V9.83a2 2 0 0 0-.59-1.42L18 5"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-flame w-4 h-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.5 14.5A2.5 2.5 0 0 0 11 12c0-1.38-.5-2-1-3-1.072-2.143-.224-4.054 2-6 .5 2.5 2 4.9 4 6.5 2 1.6 3 3.5 3 5.5a7 7 0 1 1-14 0c0-1.153.433-2.294 1-3a2.5 2.5 0 0 0 2.5 2.5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`getFuelTypeIcon should return LPG icon for lpg fuel type 1`] = `
<div>
  <div>
    <div
      class="w-12 h-8 flex items-center justify-center text-red-600"
    >
      <div
        class="relative"
      >
        <div
          class="flex items-center space-x-1"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-fuel w-6 h-6"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="3"
              x2="15"
              y1="22"
              y2="22"
            />
            <line
              x1="4"
              x2="14"
              y1="9"
              y2="9"
            />
            <path
              d="M14 22V4a2 2 0 0 0-2-2H6a2 2 0 0 0-2 2v18"
            />
            <path
              d="M14 13h2a2 2 0 0 1 2 2v2a2 2 0 0 0 2 2a2 2 0 0 0 2-2V9.83a2 2 0 0 0-.59-1.42L18 5"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-flame w-4 h-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.5 14.5A2.5 2.5 0 0 0 11 12c0-1.38-.5-2-1-3-1.072-2.143-.224-4.054 2-6 .5 2.5 2 4.9 4 6.5 2 1.6 3 3.5 3 5.5a7 7 0 1 1-14 0c0-1.153.433-2.294 1-3a2.5 2.5 0 0 0 2.5 2.5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`getFuelTypeIcon should return diesel icon for diesel fuel type 1`] = `
<div>
  <div>
    <div
      class="w-12 h-8 flex items-center justify-center text-black"
    >
      <div
        class="relative"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-fuel w-full h-full"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="3"
            x2="15"
            y1="22"
            y2="22"
          />
          <line
            x1="4"
            x2="14"
            y1="9"
            y2="9"
          />
          <path
            d="M14 22V4a2 2 0 0 0-2-2H6a2 2 0 0 0-2 2v18"
          />
          <path
            d="M14 13h2a2 2 0 0 1 2 2v2a2 2 0 0 0 2 2a2 2 0 0 0 2-2V9.83a2 2 0 0 0-.59-1.42L18 5"
          />
        </svg>
        <div
          class="absolute -bottom-1 -right-1 w-3 h-3 bg-black rounded-full border-2 border-white"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`getFuelTypeIcon should return electric icon for electric fuel type 1`] = `
<div>
  <div>
    <div
      class="w-12 h-8 flex items-center justify-center text-yellow-600"
    >
      <div
        class="relative"
      >
        <div
          class="flex items-center space-x-1"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-zap w-6 h-6"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-battery w-4 h-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="10"
              rx="2"
              ry="2"
              width="16"
              x="2"
              y="7"
            />
            <line
              x1="22"
              x2="22"
              y1="11"
              y2="13"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`getFuelTypeIcon should return gasoline icon for empty string (fallback) 1`] = `
<div>
  <div>
    <div
      class="w-12 h-8 flex items-center justify-center text-blue-600"
    >
      <div
        class="relative"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-fuel w-full h-full"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="3"
            x2="15"
            y1="22"
            y2="22"
          />
          <line
            x1="4"
            x2="14"
            y1="9"
            y2="9"
          />
          <path
            d="M14 22V4a2 2 0 0 0-2-2H6a2 2 0 0 0-2 2v18"
          />
          <path
            d="M14 13h2a2 2 0 0 1 2 2v2a2 2 0 0 0 2 2a2 2 0 0 0 2-2V9.83a2 2 0 0 0-.59-1.42L18 5"
          />
        </svg>
        <div
          class="absolute -bottom-1 -right-1 w-3 h-3 bg-blue-600 rounded-full border-2 border-white"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`getFuelTypeIcon should return gasoline icon for gasoline fuel type 1`] = `
<div>
  <div>
    <div
      class="w-12 h-8 flex items-center justify-center text-blue-600"
    >
      <div
        class="relative"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-fuel w-full h-full"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="3"
            x2="15"
            y1="22"
            y2="22"
          />
          <line
            x1="4"
            x2="14"
            y1="9"
            y2="9"
          />
          <path
            d="M14 22V4a2 2 0 0 0-2-2H6a2 2 0 0 0-2 2v18"
          />
          <path
            d="M14 13h2a2 2 0 0 1 2 2v2a2 2 0 0 0 2 2a2 2 0 0 0 2-2V9.83a2 2 0 0 0-.59-1.42L18 5"
          />
        </svg>
        <div
          class="absolute -bottom-1 -right-1 w-3 h-3 bg-blue-600 rounded-full border-2 border-white"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`getFuelTypeIcon should return gasoline icon for petrol fuel type (alias) 1`] = `
<div>
  <div>
    <div
      class="w-12 h-8 flex items-center justify-center text-blue-600"
    >
      <div
        class="relative"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-fuel w-full h-full"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="3"
            x2="15"
            y1="22"
            y2="22"
          />
          <line
            x1="4"
            x2="14"
            y1="9"
            y2="9"
          />
          <path
            d="M14 22V4a2 2 0 0 0-2-2H6a2 2 0 0 0-2 2v18"
          />
          <path
            d="M14 13h2a2 2 0 0 1 2 2v2a2 2 0 0 0 2 2a2 2 0 0 0 2-2V9.83a2 2 0 0 0-.59-1.42L18 5"
          />
        </svg>
        <div
          class="absolute -bottom-1 -right-1 w-3 h-3 bg-blue-600 rounded-full border-2 border-white"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`getFuelTypeIcon should return gasoline icon for unknown fuel type (fallback) 1`] = `
<div>
  <div>
    <div
      class="w-12 h-8 flex items-center justify-center text-blue-600"
    >
      <div
        class="relative"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-fuel w-full h-full"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="3"
            x2="15"
            y1="22"
            y2="22"
          />
          <line
            x1="4"
            x2="14"
            y1="9"
            y2="9"
          />
          <path
            d="M14 22V4a2 2 0 0 0-2-2H6a2 2 0 0 0-2 2v18"
          />
          <path
            d="M14 13h2a2 2 0 0 1 2 2v2a2 2 0 0 0 2 2a2 2 0 0 0 2-2V9.83a2 2 0 0 0-.59-1.42L18 5"
          />
        </svg>
        <div
          class="absolute -bottom-1 -right-1 w-3 h-3 bg-blue-600 rounded-full border-2 border-white"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`getFuelTypeIcon should return hybrid icon for hybrid fuel type 1`] = `
<div>
  <div>
    <div
      class="w-12 h-8 flex items-center justify-center text-purple-600"
    >
      <div
        class="relative"
      >
        <div
          class="flex items-center space-x-1"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-battery w-6 h-6"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="10"
              rx="2"
              ry="2"
              width="16"
              x="2"
              y="7"
            />
            <line
              x1="22"
              x2="22"
              y1="11"
              y2="13"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-leaf w-4 h-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 20A7 7 0 0 1 9.8 6.1C15.5 5 17 4.48 19 2c1 2 2 4.18 2 8 0 5.5-4.78 10-10 10Z"
            />
            <path
              d="M2 21c0-3 1.85-5.36 5.08-6C9.5 14.52 12 13 13 12"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
